2004-03-17  Mikael Hallendal  <micke@imendio.com>

	* devhelp.in: 
	- Export LD_LIBRARY_PATH, thanks Michel Galle for reporting.

2004-03-17  Mikael Hallendal  <micke@imendio.com>

	* Release 0.9

	* NEWS: Updated for 0.9
	* configure.in: Bumped version to 0.9
	* src/Makefile.am: Fixed the genmarshal-crap

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* src/dh-base.c:
	* src/dh-html.c:
	* src/dh-window.c:
	- Make the HTML view white for now.

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* src/Makefile.am:
	* src/dh-history.c:
	* src/dh-history.h:
	- Removed
	* src/dh-html.c:
	- Added support for gecko's builtin history list.
	* src/dh-window.c:
	- Make history work again.

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* src/dh-preferences.c:
	* ui/devhelp.glade:
	- Really make the dialog transient.
	* ui/window.ui: Hide Copy for now.

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* autogen.sh: Require automake 1.8

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am: Added schemas
	* configure.in: Added gconf tools
	* devhelp.schemas.in: Added
	* src/dh-gecko-utils.cpp:
	* src/dh-gecko-utils.h: 
	- Split a gtk font string
	* src/dh-html.c: (html_init): Don't set the font here.
	* src/dh-preferences.c:
	- Set fonts, supports using system fonts or override for devhelp.
	- Close button works
	- Setting transient to main window.
	* src/dh-window.c:
	- Set prefs window to be transient.
	* ui/devhelp.glade: Added Use system default button to prefs dialog.

2004-03-16  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Added libglade dependency
	* src/Makefile.am: Added includes and dh-preferences.[ch]
	* src/dh-base.c: (dh_base_new): initialize preferences
	* src/dh-gecko-utils.cpp: 
	- fixed set_font to work with both variable and fixed font width.
	* src/dh-preferences.c: 
	* src/dh-preferences.h:
	- Added, starting of a preference dialog and gconf storage.
	* src/dh-util.c:
	(tagify_bold_labels), (get_glade_file),