@@ -1,6 +1,20 @@
 <gconfschemafile>
   <schemalist>
- 
+
+    <schema>
+      <key>/schemas/apps/devhelp/ui/main_window_state</key>
+      <applyto>/apps/devhelp/ui/main_window_state</applyto>
+      <owner>devhelp</owner>
+      <type>int</type>
+      <default>0</default>
+      <locale name="C">
+         <short>State of the main window</short>
+         <long>
+           The state of the main window.
+         </long>
+      </locale>
+    </schema>
+
     <schema>
       <key>/schemas/apps/devhelp/ui/main_window_width</key>
       <applyto>/apps/devhelp/ui/main_window_width</applyto>
